--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/encode_sans"
         android:text="Tasks"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,5 +18,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.051" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="327dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.052">
+
+        <TextView
+            android:id="@+id/modern_ligh"
+            android:layout_width="135dp"
+            android:layout_height="18dp"
+            android:layout_marginLeft="80dp"
+            android:gravity="top"
+            android:text="Task 1 initial"
+            android:textSize="16sp" />
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_logo"
+            tools:src="@tools:sample/avatars"
+            tools:srcCompat="@drawable/ic_logo" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
