--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,37 @@
             android:src="@drawable/ic_logo"
             tools:src="@tools:sample/avatars"
             tools:srcCompat="@drawable/ic_logo" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout2"
+        android:layout_width="327dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.234">
+
+        <TextView
+            android:id="@+id/modern_ligh3"
+            android:layout_width="135dp"
+            android:layout_height="18dp"
+            android:layout_marginLeft="80dp"
+            android:gravity="top"
+            android:text="Task 2 initial"
+            android:textSize="16sp" />
+
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_logo"
+            tools:src="@tools:sample/avatars"
+            tools:srcCompat="@drawable/ic_logo" />
 
     </FrameLayout>
 
