--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,18 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"
-    >
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".HomeFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:fontFamily="@font/encode_sans"
-        android:text="Tasks"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        />
+        android:gravity="center"
+        android:text="@string/Home"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 
 
