--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,5 +15,34 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="lastname"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:drawableLeft="@drawable/ic_task"
+            android:padding="5dp" />
+
+        <TextView
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginRight="2dp"
+            android:layout_toLeftOf="@+id/btnDelete"
+            android:drawableLeft="@android:drawable/ic_menu_edit"
+            android:padding="5dp" />
+    </RelativeLayout>
 </FrameLayout>
