add create button in taskfragment and rmv text layout

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".TaskFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/tasks" />
+
+    <Button
+        android:id="@+id/buttonCreateTask"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="340dp"
+        android:text="@string/Create"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
